# pdfmerge

./: .pylintrc  README.md  pyproject.toml
pdfmerge/: pdfmerge.py
