[tool.poetry]
name = "dml-pdfmerge"
version = "2023.4.1002"
description = "Script to merge pdfs into a new pdf."
authors = ["David Lane <cheery.koala5370@fastmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
# Section managed with vi
pdfmerge = "dml_pdfmerge.pdfmerge:main"

[tool.poetry.dependencies]
python = "^3.11"
pypdf2 = "^3.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pylint = "^2.17.2"


[[tool.poetry.source]]
name = "repositories.fury"
url = "https://pypi.fury.io/dave-lane/"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.bumpver]
current_version = "2023.4.1002"
version_pattern = "YYYY.MM.BUILD"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]

